fix(pages): fix page 404 & verify padding on small screen

--- a/src/pages/verify/verify.scss
+++ b/src/pages/verify/verify.scss
@@ -10,6 +10,8 @@
 
 	>.description {
 		color: var(--text-color-dynamic);
+		text-align: center;
+		margin: 20px;
 	}
 
 	>.logo {
